--- a/templates/choice_R2.html
+++ b/templates/choice_R2.html
@@ -86,7 +86,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Green Design Architect</h5>
-            <p>Price: 30 Lakh</p>
+            <p>Price: 30 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -99,7 +99,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Commercial Architect</h5>
-            <p>Price: 22 Lakh</p>
+            <p>Price: 22 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -112,7 +112,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Urban Designer</h5>
-            <p>Price: 40 Lakh</p>
+            <p>Price: 40 GD</p>
           </div>
         </div>
         </a> 
