--- a/templates/choice_R3_1.html
+++ b/templates/choice_R3_1.html
@@ -83,7 +83,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Test Pits</h5>
-            <p>Price: 6 Lakh</p>
+            <p>Price: 6 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -96,7 +96,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Trenching</h5>
-            <p>Price: 8 Lakh</p>
+            <p>Price: 8 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -111,7 +111,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>In-Situ Testing</h5>
-            <p>Price: 12 Lakh</p>
+            <p>Price: 12 GD</p>
           </div>
         </div>
         </a> 
