--- a/templates/choice_R3_2.html
+++ b/templates/choice_R3_2.html
@@ -84,7 +84,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Surveyor A</h5>
-            <p>Price: 10 Lakh</p>
+            <p>Price: 10 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -99,7 +99,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Surveyor B</h5>
-            <p>Price: 7 Lakh</p>
+            <p>Price: 7 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -114,7 +114,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Surveyor C</h5>
-            <p>Price: 4 Lakh</p>
+            <p>Price: 4 GD</p>
           </div>
         </div>
         </a>
