--- a/templates/choice_R4.html
+++ b/templates/choice_R4.html
@@ -77,7 +77,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>All Modern Machinery</h5>
-            <p>7 Days/15 Lakh</p>
+            <p>7 Days/15 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -92,7 +92,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Medium Quality Machinery</h5>
-            <p>15 Days/10 Lakh</p>
+            <p>15 Days/10 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -106,7 +106,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Wretched Quality Machinery</h5>
-            <p>30 Days/7 Lakh</p>
+            <p>30 Days/7 GD</p>
           </div>
         </div>
         </a>
@@ -118,7 +118,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Contract Labour Agreement</h5>
-            <p>5 Days/25 Lakh</p>
+            <p>5 Days/25 GD</p>
           </div>
         </div>
         </a>
