--- a/templates/choice_R5.html
+++ b/templates/choice_R5.html
@@ -95,7 +95,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Pile Foundation</h5>
-            <p>Price: 80 Lakh</p>
+            <p>Price: 80 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -109,7 +109,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Continuous Stone Masonry</h5>
-            <p>Price: 70 Lakh</p>
+            <p>Price: 70 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -123,7 +123,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Strip Foundation</h5>
-            <p>Price: 75 Lakh</p>
+            <p>Price: 75 GD</p>
           </div>
         </div>
         </a> 
@@ -136,7 +136,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Raft Foundation</h5>
-            <p>Price: 84 Lakh</p>
+            <p>Price: 84 GD</p>
           </div>
         </div>
         </a>
