--- a/templates/scenario_2_2.html
+++ b/templates/scenario_2_2.html
@@ -45,7 +45,7 @@
         <h1>Attention!</h1>
         <p>Queen Daenerys has proclaimed that it is mandatory to make all castles eco-friendly in the seven Kingdoms.
         </br>
-        Since you had chosen a Commercial Architect who didn't accomodate any environmental designs, you have to redesign your castle. 10 lakhs have been deducted in this effort.
+        Since you had chosen a Commercial Architect who didn't accomodate any environmental designs, you have to redesign your castle. 10 GD have been deducted in this effort.
         </br>
         </br>
         </br>
