--- a/templates/scenario_5.html
+++ b/templates/scenario_5.html
@@ -89,7 +89,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Increase Workforce</h5>
-            <p>Price: 3 Lakh</p>
+            <p>Price: 3 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -105,7 +105,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Sit Tight</h5>
-            <p>Price: 0 Lakh</p>
+            <p>Price: 0 GD</p>
           </div>
         </div>
         <!-- overlay --> 
