--- a/templates/scenario_6_3.html
+++ b/templates/scenario_6_3.html
@@ -98,7 +98,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Share/Obtain more water</h5>
-            <p>Price: 3 Lakh</p>
+            <p>Price: 3 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -111,7 +111,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Stop construction for now</h5>
-            <p>Price: 1.75 Lakh</p>
+            <p>Price: 1.75 GD</p>
           </div>
         </div>
         <!-- overlay --> 
