--- a/templates/scenario_3.html
+++ b/templates/scenario_3.html
@@ -90,7 +90,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Replace The Poor Soil.</h5>
-            <p>Price: 1.3 Lakh</p>
+            <p>Price: 1.3 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -105,7 +105,7 @@
               
           <div class="overlay-caption">
             <h5>Chemical Stabilization</h5>
-            <p>Price: 4 Lakh</p>
+            <p>Price: 4 GD</p>
           </div>
         </div>
         <!-- overlay --> 
@@ -118,7 +118,7 @@
         <div class="overlay">
           <div class="overlay-caption">
             <h5>Compact The Soil</h5>
-            <p>Price: 50,000</p>
+            <p>Price: 0.5 GD</p>
           </div>
         </div>
         </a>
