--- a/templates/scenario_4_3.html
+++ b/templates/scenario_4_3.html
@@ -43,7 +43,7 @@
       <div class="banner-text text-center">
         <h1>ATTENTION!</h1>
         <p>Due to some issues with the machines, the work has been delayed by ten days and you have to pay for the extra cost and maintenance of the equipment.</br>
-        Since you were working with Cheap Quality Machinery, 6.5 Lakh has been deducted from your earnings.
+        Since you were working with Cheap Quality Machinery, 6.5 GD has been deducted from your earnings.
        </p> 
     </div>
   </div>
