--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,11 @@
 body{
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
+@media only screen and (min-width: 1100px) {
+.mob{
+  visibility: hidden;
+}
+}
 .opening{
 	background: url(../image/cover.jpg) no-repeat fixed center;
 	background-size:100% 100%;
@@ -12,14 +17,6 @@ body{
   min-height: 100%;
   width: 100%; 
   height: 100%;
-}
-.opening_text{
-	color: white;
-	font-style: bold;
-	font-size: 200%;
-	font-family: "Times New Roman", Times, serif;
-	margin-left: 55%;
-	
 }
 #intro{
 	background: url(../image/front3.jpg) no-repeat fixed center;
@@ -36,7 +33,9 @@ body{
 
 }
 .opening:hover{
-	transform: translate(0,-110%);
+	-webkit-transform:translate(0,-110%);
+  -moz-transform:translate(0,-110%);
+  transform: translate(0,-110%);
 	opacity:0;
 }
 .btn {
@@ -92,7 +91,6 @@ body{
 }
 .opening_text{
 
-	color: white;
 	font-style: bold;
 	font-size: 200%;
 	
@@ -115,6 +113,8 @@ body{
 }
 .opening:hover{
 	transform: translate(0,-110%);
+  -webkit-transform:translate(0,-110%);
+  -moz-transform:translate(0,-110%);
 	opacity:0;
 }
 .btn {
@@ -149,5 +149,15 @@ body{
   font-size: 100%;
   left:25vw;
   top:15vh;
+}
+.mob{
+    position: absolute;
+  top:30vh;
+  left:40vw;
+  font-size: 110%;
+  color: rgba(110,0,0,1);
+  display: block;
+  text-decoration: none;
+
 }
 }
