--- a/templates/home.html
+++ b/templates/home.html
@@ -12,13 +12,13 @@
 
 <body>
 	<div class="opening">
-		
+		<p><a href="#0" class="mob">Tap to Explore</a> <p>
 	</div>
 	<div id="intro">
 		<p><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3" class="link">Click Here To Know More About These Events</a> <p>
 	</div>
 <div class="next">
-  			<a href="/signup" class="btn orange">
+  			<a href="login.html" class="btn orange">
   				Begin Your Watch
   			</a>
 		</div>
