preventing use on potrait mode

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,11 +11,15 @@
 </head>
 
 <body>
+	<div class="message">
+	<p>Please Switch to <br>Landscape mode</p>
+	</div>
+	<div class="wrapper">
 	<div class="opening">
 		<p><a href="#0" class="mob">Tap to Explore</a> <p>
 	</div>
 	<div id="intro">
-		<p><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3" class="link">Click Here To Know More About These Events</a> <p>
+		<p class="link"><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3">Click Here</a> to Know More About These Events </p>
 	</div>
 <div class="next">
   			<a href="login.html" class="btn orange">
