--- a/templates/error.html
+++ b/templates/error.html
@@ -29,8 +29,8 @@
 
 				<div class="wrap">
 					
-					<div id="intro">
-						<h1><span class="shuffle">SITE UNDER </span><span style="color: yellow;">MAINTENANCE</span></h1>
+					<div id="intro" style="margin-left: -100px">
+						<h1><span class="shuffle">UH-HUH! ACCIDENT OCCURED</span><br><span style="color: yellow;"><a href="/dashboard">CLICK HERE</a></span></h1>
 					</div><!--intro-->
 						<!-- Countdown dashboard start -->
 						<div id="countdown_dashboard">
