--- a/templates/home.html
+++ b/templates/home.html
@@ -16,16 +16,16 @@
 	</div>
 	<div class="wrapper">
 	<div class="opening">
-		<p><a href="#0" class="mob">Tap to Explore</a> <p>
+		<p><a href="#0" class="mob">Tap to Explore</a> </p>
 	</div>
 	<div id="intro">
-		<p class="link"><a href="https://goo.gl/forms/tgIy2H40keO4EmUD3">Click Here</a> to Know More About These Events </p>
+		<p class="link"><a target="blank" style="text-decoration: none; color: white;" href="https://goo.gl/forms/tgIy2H40keO4EmUD3">Click Here to Know More About These Events </a></p>
 	</div>
 <div class="next">
-  			<a href="login.html" class="btn orange">
+  			<a href="/login" class="btn orange">
   				Begin Your Watch
   			</a>
 		</div>
-	
+	</div>
 </body>
 </html>
