--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,7 +2,7 @@ body{
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 @media only screen and (min-width: 1100px) {
-.mob{
+.mob, .message {
   visibility: hidden;
 }
 }
@@ -89,6 +89,11 @@ body{
   width: 100%; 
   height: 100%;
 }
+
+.message {
+  display: none;
+  visibility: hidden;
+}
 .opening_text{
 
 	font-style: bold;
@@ -158,6 +163,13 @@ body{
   color: rgba(110,0,0,1);
   display: block;
   text-decoration: none;
-
 }
+}
+
+@media screen and (orientation:portrait) {
+    .wrapper {
+      display: none;
+      visibility: hidden;
+    }
+
 }
