home page changeed

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -171,5 +171,8 @@ body{
       display: none;
       visibility: hidden;
     }
-
+    .message{
+    	display: block;
+    	visibility: visible;
+    }
 }
