--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
 				<div class="group">
 					<label for="pass" class="label">Password</label>
 					<input id="pass" type="password" class="input" name="inputPassword" data-type="password">
+					<p> To reset password drop a mail with details at vkrahulagarwal@gmail.com</p>
 				</div>
 				<div class="group">
 					<input type="submit" class="button" value="Sign In">
