--- a/templates/dev.html
+++ b/templates/dev.html
@@ -56,8 +56,15 @@
 		<hr>
 	</div>
 		<table>
+		<tr>
+		<td>
+		</td>
+		<td>
+		</td>
+		</tr>
 			<tr>
 				<td>
+					<img src="../static/image/ishan.jpg"><br>
 					Ishan Vaidya<br>
 					<hr><p class="blur">
 						Front-End
@@ -74,6 +81,7 @@
 			</tr>
 			<tr>
 				<td>
+					<img src="../static/image/dheemahi.jpeg" height="200"><br>
 					Dheemahi Turaga<br>
 					<hr>
 					<p class="blur">
@@ -81,6 +89,7 @@
 					</p>
 				</td>
 					<td>
+					<img src="../static/image/rahul.jpg" height="200"><br>
 					Rahul Agarwal<br>
 					<hr>
 					<p class="blur">
