--- a/static/css/dev.css
+++ b/static/css/dev.css
@@ -2,7 +2,7 @@
 	background-color: #3f538e;
 	position: absolute;
 	width:10vw;
-	height:100vh;
+	height:200vh;
 	left:0;
 	top:0;
 	margin-top: 0;
@@ -10,8 +10,8 @@
 }
 .container{
 	position: absolute;
-	left:25vw;
-	top:25vh;
+	left:23vw;
+	top:20vh;
 }
 .heading{
 	width:60vw;
@@ -22,8 +22,8 @@
 }
 table{
 	width:50vw;
-	margin-top: 5vw;
-	margin-left: 2vw;
+	
+	
 	text-align: center;
 }
 td hr{
@@ -32,10 +32,11 @@ td hr{
 }
 td{
 	padding-bottom: 4vw;
+	width:40vw;
 	font-size: 1.2em;
 	line-height: 1.6;
 	font-weight: 300;
-	margin-right: 4%;
+	margin-right: 4vw;
 	transition: .3s;
 }
 td:hover{
@@ -54,4 +55,8 @@ h1{
 .blur{
 	margin-top: 0;
 	color:rgba(0,0,0,.7);
+}
+img{
+	
+	width: 30vh;
 }
