--- a/templates/dev.html
+++ b/templates/dev.html
@@ -72,6 +72,7 @@
 					
 				</td>
 					<td>
+					<img src="../static/image/bhavesh.png"><br>
 					Bhawesh Bhansali<br>
 					<hr>
 					<p class="blur">
