bhavesh height changed

--- a/templates/dev.html
+++ b/templates/dev.html
@@ -72,7 +72,7 @@
 					
 				</td>
 					<td>
-					<img src="../static/image/bhavesh.png"><br>
+					<img src="../static/image/bhavesh.png" height="200"><br>
 					Bhawesh Bhansali<br>
 					<hr>
 					<p class="blur">
