--- a/templates/choice_R4.html
+++ b/templates/choice_R4.html
@@ -74,7 +74,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>All Modern Machinery</h5>
             <p>7 Days/15 GD</p>
@@ -89,7 +89,7 @@
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Medium Quality Machinery</h5>
             <p>15 Days/10 GD</p>
@@ -103,7 +103,7 @@
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Wretched Quality Machinery</h5>
             <p>30 Days/7 GD</p>
@@ -115,7 +115,7 @@
        </div>  
          </div>
        <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_4/work-4.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check4').checked = true">
           <div class="overlay-caption">
             <h5>Contract Labour Agreement</h5>
             <p>5 Days/25 GD</p>
