--- a/templates/choice_R5.html
+++ b/templates/choice_R5.html
@@ -92,7 +92,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Pile Foundation</h5>
             <p>Price: 80 GD</p>
@@ -106,7 +106,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Continuous Stone Masonry</h5>
             <p>Price: 70 GD</p>
@@ -120,7 +120,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Strip Foundation</h5>
             <p>Price: 75 GD</p>
@@ -133,7 +133,7 @@ construction of stones bonded together with mortar is termed as stone masonry wh
        </div>  
       </div>
          <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-4.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check4').checked = true">
           <div class="overlay-caption">
             <h5>Raft Foundation</h5>
             <p>Price: 84 GD</p>
