--- a/templates/choice_R6_5.html
+++ b/templates/choice_R6_5.html
@@ -114,7 +114,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-1.jpg" class="work-box"> <img src="../static/image/choice_6_5/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Sandline Corporation</h5>
             <p>Price: 75.3025 GD</p>
@@ -127,7 +127,7 @@
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-2.jpg" class="work-box"> <img src="../static/image/choice_6_5/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Pentos Limited</h5>
             <p>Price: 63.7 GD</p>
@@ -140,7 +140,7 @@
        </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-3.jpg" class="work-box"> <img src="../static/image/choice_6_5/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Westeros & Esssos Co.</h5>
             <p>Price: 56.42 GD</p>
