--- a/templates/scenario_6_3.html
+++ b/templates/scenario_6_3.html
@@ -82,7 +82,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-1.jpg" class="work-box"> <img src="../static/image/scenario_6_3/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Ignore the people</h5>
             <p>Price: 0</p>
@@ -95,7 +95,7 @@
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-2.jpg" class="work-box"> <img src="../static/image/scenario_6_3/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Share/Obtain more water</h5>
             <p>Price: 3 GD</p>
@@ -108,7 +108,7 @@
        </div>  
          </div>
          <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-3.jpg" class="work-box"> <img src="../static/image/scenario_6_3/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Stop construction for now</h5>
             <p>Price: 1.75 GD</p>
