--- a/templates/choice_R1.html
+++ b/templates/choice_R1.html
@@ -88,7 +88,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_1/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Alluvial Soil</h5>
           </div>
@@ -100,7 +100,7 @@
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_1/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true"?
           <div class="overlay-caption">
             <h5>Laterite Soil</h5>
           </div>
@@ -112,7 +112,7 @@
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_1/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Black Soil</h5>
           </div>
@@ -123,7 +123,7 @@
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_1/work-4.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check4').checked = true">
           <div class="overlay-caption">
             <h5>Mountain Soil</h5>
           </div>
