--- a/templates/choice_R2.html
+++ b/templates/choice_R2.html
@@ -83,7 +83,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Green Design Architect</h5>
             <p>Price: 30 GD</p>
@@ -96,7 +96,7 @@
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Commercial Architect</h5>
             <p>Price: 22 GD</p>
@@ -109,7 +109,7 @@
          <input type="radio" name="arch" class="radio" id="check2" value = "CommercialArchitect"/>
       </div>          
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_2/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Urban Designer</h5>
             <p>Price: 40 GD</p>
