--- a/templates/choice_R3_2.html
+++ b/templates/choice_R3_2.html
@@ -81,7 +81,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Surveyor A</h5>
             <p>Price: 10 GD</p>
@@ -96,7 +96,7 @@
 
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Surveyor B</h5>
             <p>Price: 7 GD</p>
@@ -111,7 +111,7 @@
 
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_3_2/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Surveyor C</h5>
             <p>Price: 4 GD</p>
