--- a/templates/scenario_3.html
+++ b/templates/scenario_3.html
@@ -87,7 +87,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Replace The Poor Soil.</h5>
             <p>Price: 1.3 GD</p>
@@ -101,7 +101,7 @@
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box">  <img src="../static/image/scenario_3/work-2.jpg" alt="">
       
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
               
           <div class="overlay-caption">
             <h5>Chemical Stabilization</h5>
@@ -115,7 +115,7 @@
        </div> 
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Compact The Soil</h5>
             <p>Price: 0.5 GD</p>
@@ -129,7 +129,7 @@
        </div>  
       </div>
        <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_3/work-4.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check4').checked = true">
           <div class="overlay-caption">
             <h5>Do Nothing</h5>
             <p>Price: 0</p>
