--- a/templates/scenario_6_1.html
+++ b/templates/scenario_6_1.html
@@ -81,7 +81,7 @@ What do you advise him to do?
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_6_1/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Accept Queen’s offer</h5>
             <p>Price: 150 GD</p>
@@ -94,7 +94,7 @@ What do you advise him to do?
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/scenario_6_1/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Uphold the contract.</h5>
             <p>Price: 200 GD</p>
