--- a/templates/scenario_6_2.html
+++ b/templates/scenario_6_2.html
@@ -83,7 +83,7 @@
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-1.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-1.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check1').checked = true">
           <div class="overlay-caption">
             <h5>Bribe Local Authorities</h5>
             <p>Price: 2 GD</p>
@@ -96,7 +96,7 @@
        </div> 
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-2.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-2.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check2').checked = true">
           <div class="overlay-caption">
             <h5>Compensate Families</h5>
             <p>Price: 8 GD</p>
@@ -109,7 +109,7 @@
        </div> 
          </div>
          <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="../image/work-3.jpg" class="work-box"> <img src="../static/image/scenario_6_2/work-3.jpg" alt="">
-        <div class="overlay">
+        <div class="overlay" onclick="document.getElementById('check3').checked = true">
           <div class="overlay-caption">
             <h5>Compensate Families and Increase Safety</h5>
             <p>Price: 15 GD</p>
